--- a/source/_PackageLevelCustomizations.cshtml
+++ b/source/_PackageLevelCustomizations.cshtml
@@ -55,3 +55,12 @@
     <EmbeddedJar Include="..\..\externals\com.xamarin.google.android.play.feature.delivery.extensions\extensions.jar" />
   </ItemGroup>
 }
+
+@* .NET 9 changes some binding internals that breaks some of our hand bound code. This property reverts
+   to the old behavior. Once we are .NET 9+ we should redo our hand bound code and remove this. *@
+@if (@Model.NuGetPackageId == "Xamarin.AndroidX.Media3.ExoPlayer")
+{
+  <PropertyGroup>
+    <_AndroidEmitLegacyInterfaceInvokers>true</_AndroidEmitLegacyInterfaceInvokers>
+  </PropertyGroup>
+}
