--- a/source/AndroidXProject.cshtml
+++ b/source/AndroidXProject.cshtml
@@ -35,7 +35,7 @@
   <!-- NuGet package properties -->
   <PropertyGroup>
     <PackageId>@(Model.NuGetPackageId)</PackageId>
-    <Title>.NET for Android bindings for the Android Java library '@(Model.MavenGroupId):@(Model.Name)'.</Title>
+    <Title>.NET for Android and MAUI bindings for the Android Java library '@(Model.MavenGroupId):@(Model.Name)'.</Title>
     <Description>
       $(Title)@(Model.NuGetPackageId.StartsWith("Xamarin.AndroidX.Compose") ? " Note this package only adds the Java library to the application. C# bindings are not provided." : string.Empty)
 
